# upstream-oxart-devices

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre_commit_checks.yml  test.yml
