[tool.poetry]
# name = "SET_ME"
version = "0.1"
description = ""
authors = ["Oxford Ionics"]
license = "Proprietary"

[[tool.poetry.source]]
name = "oxionics"
url = "http://pypi.oxionics.com:3141/oiuser/oxionics/+simple/"
default = true

[tool.poetry.dependencies]
# We are using a slightly old PyQt5 (specified by artiq) which limits what
# Python versions have wheels available. If we upgrade the Qt version we can
# probably relax this Python requirement.
python = "~3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
black = "^21.12b0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = "{{ base }}.{{ distance }}+g{{ commit }}"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
fmt = "black ."
fmt-test = "black --check ."
test = "pytest"
flake = "flake8 ."
